Load Tactile theme files from the theme gem
With some minor adjustments to the gem's default layout to:

* use a different `title` tag
* use a different `header` tag
* remove the whole `section#downloads`

Ref: <https://github.com/blog/2236-github-pages-now-runs-jekyll-3-2>
Ref: <https://github.com/blog/2295-new-theme-chooser-for-github-pages>

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
-safe: true
-lsi: false
+---
+gems:
+  - jekyll-default-layout
+  - jekyll-theme-tactile
+google_analytics: UA-43267418-1
 highlighter: rouge
+lsi: false
 permalink: pretty
+safe: true
+theme: jekyll-theme-tactile
+title: Victor Koronen
